# sear_stone_v2

./: Cargo.toml  Lesson-001.txt  Lesson-004.txt  Lesson-020.txt  Lesson-040.txt  README.md  test.txt  todo.txt
data/: word_list.json  word_list.txt
src/: main.rs
